# quiptools

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.py
csrc/quiptools/: quiptools.cu  quiptools_e8p_gemv.cu
tests/: benchmark_e8p.py  test_d4.py
